Sonarqube fixes