@@ -11,7 +11,6 @@ import uy.edu.tse.hcen.model.UsuarioSalud;
 import uy.edu.tse.hcen.service.UsuarioSaludService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Endpoint REST para gestionar Usuarios de Salud (pacientes) en las clínicas periféricas.
@@ -40,7 +39,7 @@ public class UsuarioSaludResource {
         @PathParam("tenantId") Long tenantId,
         UsuarioSaludDTO dto) {
         
-        LOGGER.info("POST /clinica/" + tenantId + "/usuarios-salud - Crear paciente CI: " + dto.getCi());
+        LOGGER.infof("POST /clinica/%d/usuarios-salud - Crear paciente CI: %s", tenantId, dto.getCi());
         
         try {
             // Convertir DTO a entidad
@@ -80,14 +79,14 @@ public class UsuarioSaludResource {
     @Produces(MediaType.APPLICATION_JSON)
     public Response listarUsuariosSalud(@PathParam("tenantId") Long tenantId) {
         
-        LOGGER.info("GET /clinica/" + tenantId + "/usuarios-salud - Listar pacientes");
+        LOGGER.infof("GET /clinica/%d/usuarios-salud - Listar pacientes", tenantId);
         
         try {
             List<UsuarioSalud> usuarios = service.listarUsuariosSalud(tenantId);
             
             List<UsuarioSaludDTO> dtos = usuarios.stream()
                 .map(this::entityToDto)
-                .collect(Collectors.toList());
+                .toList();
             
             return Response.ok(dtos).build();
             
